Changes for Perl extension DBD-SQLite

1.30_03 to be released
    - Updated to SQLite 3.6.23.1 (ISHIGAKI)
    - Resolved #56693: [PATCH] Fix spelling errors (patch by
      Ansgar Burchardt) (ISHIGAKI)

1.30_02 Tue 30 Mar 2010
    - Implemented sqlite_use_immediate_transaction database handle
      attribute to avoid deadlocks easily (ISHIGAKI)
    - Resolved #55466: Problem with names in DB that using square
      bracers (ISHIGAKI)
    - Added SQLITE_ENABLE_LOCKING_STYLE=0 for Mac OSX to avoid
      compile error (ISHIGAKI)

1.30_01 Wed 10 Mar 2010
    *** CHANGES THAT MAY POSSIBLY BREAK YOUR OLD APPLICATIONS ***
    - Resolved #54271: Inserting a string with utf-8 flag on
      corrupts BLOB data; now BLOB data is always stored as bytes
      (without the utf-8 flag) even if it has the flag set (ISHIGAKI)
    - Updated to SQLite 3.6.23 (DUNCAND)
    - Implemented NUM_OF_PARAMS statement handle attribute (ISHIGAKI)
    - Added experimental "sqlite_allow_multiple_statements"
      database handle attribute, and "sqlite_unprepared_statements"
      statement handle attribute, to allow processing a SQL dump.
      (ISHIGAKI)
    - Resolved #53579: Added a note and a test of placeholders.
      (ISHIGAKI)
    - Resolved #45113, which was actually an issue of dequoting
      primary key column names (ISHIGAKI)
    - You can now retrieve some of the statement handle attributes
      before you execute. (ISHIGAKI)
    - Added preamble to copy sqlite3.[hc] files into a share
      directory (where you can access via File::ShareDir) to allow
      extension authors to use the same C source/header as they
      used to build DBD::SQLite itself. (ISHIGAKI)

1.29 Fri  8 Jan 2010
    - Updated to SQLite 3.6.22 (DUNCAND)

1.28_02 Sun  3 Jan 2010
    - Now empty (or comment only) statements won't cause segv
      or "not an error" errors. Spotted by TOKUHIROM. (ISHIGAKI)
    - Resolved #52573: previous fix always turned on the AutoCommit